# iOS-BLE-maximum-througput-example

./: .gitignore  README.md
NRF/: CMakeLists.txt  prj.conf
NRF/include/: ble.h
NRF/src/: ble.c  main.c  test_service.c
central/MaximumThroughput.xcodeproj/: project.pbxproj
central/Shared/: BluetoothService.swift  ContentView.swift
central/macOS/: Info.plist
iOS/MaximumThroughput/Shared/: ContentViewModel.swift  MaximumThroughputApp.swift
peripheral/: CMakeLists.txt  prj.conf
peripheral/include/: test_service.h
peripheral/src/: ble.c  main.c
